# CHIP8

./: .gitignore  CMakeLists.txt  README.md
app/executor/: CMakeLists.txt
app/executor/src/: main.c
